# basic-cmake

./: README.md
src/: CMakeLists.txt
src/sandbox/: CMakeLists.txt
src/sandbox/src/: 0hello-world.cpp  0hello-world.h  CMakeLists.txt  _hello-world.cpp
src/sandbox/test/src/: CMakeLists.txt  test_0hello-world.cpp
